# ghidorah

./: .gitignore  Cargo.toml  LICENSE  README.md  config
foo/: cluster.crt  cluster.key
src/: main.rs
src/config/: mod.rs
src/gateway/: config.rs  mod.rs  node.rs
