[package]
name = "ghidorah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
