[package]
name = "ghidorah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
flate2 = "1.0.28"
futures-util = "0.3.30"
once_cell = "1.19.0"
pingora = { version = "0.2.0", features = ["lb"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.1"
uuid = { version = "1.8.0", features = ["v4"] }
